--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
 
 		<!-- Intro -->
 		<div id="intro">
-			<h1>This is<br />
-				Massively</h1>
-			<p>A free, fully responsive HTML5 + CSS3 site template designed by <a
-					href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-				and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+			<h1>Welcome<br />
+				My name id milan thapa</h1>
+			<p>I am a student of computer engineering</p>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
@@ -34,13 +32,13 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Massively</a>
+			<a href="index.html" class="logo">Portfolio</a>
 		</header>
 
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li class="active"><a href="index.html">This is Massively</a></li>
+				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="blogs.html">Blogs</a></li>
 				<li><a href="about.html">About Us</a></li>
 			</ul>
