--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Massively by HTML5 UP</title>
+	<title>Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,7 @@
 		<!-- Intro -->
 		<div id="intro">
 			<h1>Welcome<br />
-				My name id milan thapa</h1>
+				My name is milan thapa</h1>
 			<p>I am a student of computer engineering</p>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -65,7 +65,7 @@
 				</header>
 				<a href="#" class="image main"><img src="images/me.jpg" alt="" /></a>
 				<ul class="actions special">
-					<li><a href="#" class="button large">Full Story</a></li>
+					<li><a href="#" class="button large">View on GitHub</a></li>
 				</ul>
 			</article>
 
@@ -79,11 +79,11 @@
 						<h2><a href="#">Sed magna<br />
 								ipsum faucibus</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+					<a href="#" class="image fit"><img src="images/rick.jpg" alt="" /></a>
 					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
 						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Full Story</a></li>
+						<li><a href="#" class="button">View on GitHub</a></li>
 					</ul>
 				</article>
 				<article>
@@ -92,11 +92,63 @@
 						<h2><a href="#">Primis eget<br />
 								imperdiet lorem</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+					<a href="#" class="image fit"><img src="images/sa.png" alt="" /></a>
 					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
 						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Full Story</a></li>
+						<li><a href="#" class="button">View on GitHub</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">April 22, 2017</span>
+						<h2><a href="#">Primis eget<br />
+								imperdiet lorem</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/vivah.png" alt="" /></a>
+					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
+						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">View on GitHub</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">April 22, 2017</span>
+						<h2><a href="#">Primis eget<br />
+								imperdiet lorem</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/nlpr.png" alt="" /></a>
+					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
+						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">View on GitHub</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">April 22, 2017</span>
+						<h2><a href="#">Primis eget<br />
+								imperdiet lorem</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/sudoku.jpg" alt="" /></a>
+					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
+						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">View on GitHub</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">April 22, 2017</span>
+						<h2><a href="#">Primis eget<br />
+								imperdiet lorem</a></h2>
+					</header>
+					<a href="#" class="image fit"><img src="images/ai_game.jpg" alt="" /></a>
+					<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
+						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+					<ul class="actions special">
+						<li><a href="#" class="button">View on GitHub</a></li>
 					</ul>
 				</article>
 			</section>
@@ -133,19 +185,20 @@
 			<section class="split contact">
 				<section class="alt">
 					<h3>Address</h3>
-					<p>1234 Somewhere Road #87257<br />
-						Nashville, TN 00000-0000</p>
+					<p>Tamghas, Gulmi </br>
+						State-5
+					</p>
 				</section>
 				<section>
 					<h3>Phone</h3>
-					<p><a href="#">(000) 000-0000</a></p>
+					<p><a href="#">(+911) 9860959177</a></p>
 				</section>
 				<section>
 					<h3>Email</h3>
-					<p><a href="#">info@untitled.tld</a></p>
+					<p><a href="#">tmilan0604@gmail.com</a></p>
 				</section>
 				<section>
-					<h3>Social</h3>
+					<h3>Follow me</h3>
 					<ul class="icons alt">
 						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
