--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 				<a href="#" class="image main"><img src="images/me.jpg" alt="" /></a>
 				<ul class="actions special">
 					<li><a href="#" class="button large">View on GitHub</a></li>
+					<li><a href="#" class="button">Demo</a></li>
 				</ul>
 			</article>
 
@@ -84,6 +85,7 @@
 						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">View on GitHub</a></li>
+						<li><a href="#" class="button">Demo</a></li>
 					</ul>
 				</article>
 				<article>
@@ -97,6 +99,7 @@
 						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">View on GitHub</a></li>
+						<li><a href="#" class="button">Demo</a></li>
 					</ul>
 				</article>
 				<article>
@@ -110,6 +113,7 @@
 						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">View on GitHub</a></li>
+						<li><a href="#" class="button">Demo</a></li>
 					</ul>
 				</article>
 				<article>
@@ -123,6 +127,7 @@
 						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">View on GitHub</a></li>
+						<li><a href="#" class="button">Demo</a></li>
 					</ul>
 				</article>
 				<article>
@@ -136,6 +141,7 @@
 						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">View on GitHub</a></li>
+						<li><a href="#" class="button">Demo</a></li>
 					</ul>
 				</article>
 				<article>
@@ -149,6 +155,7 @@
 						venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">View on GitHub</a></li>
+						<li><a href="#" class="button">Demo</a></li>
 					</ul>
 				</article>
 			</section>
